# rutter_example

./: .gitignore  README.rst  development.ini  poetry.toml  pyproject.toml
rutter_example/apps/: alpha.py  bravo.py  home.py
rutter_example/openapi/: alpha.yaml  bravo.yaml
rutter_example/routes/: alpha.py  bravo.py  home.py
rutter_example/templates/: home.jinja2
rutter_example/views/: alpha.py  bravo.py  home.py
